[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Jan Rundt <jan.rundt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^1.6.0"
Flask = "^2.0.3"
coverage = "^6.3.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
