[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Jan Rundt <jan.rundt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
invoke = "^1.6.0"
Flask = "^2.0.3"
coverage = "^6.3.2"
numpy = "^1.22.3"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.20.0"
Flask-Login = "^0.6.0"
importlib-metadata = "^4.11.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
